--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.3",
     "coingecko-api": "^1.0.10",
