--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.6.2",
     "sort-by": "^0.0.2",
     "styled-components": "^5.3.6",
+    "uniqid": "^5.4.0",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^3.0.0",
